--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -315,7 +315,7 @@
                       <hr />
                       <div class="clinic-center-box">
                         <img src="../user/img/clinic/centers/clinic-ix.png" alt="Clinic Center ix" class="clinic-img" />
-                        <div class="clinic-center-main-content">
+                        <div class="clinic-center-main-content">  
                           <div class="clinic-center-box-content">
                             <div class="clinic-center-info">
                               <div class="title">Bodrum Diyaliz Merkezi</div>
@@ -434,7 +434,7 @@
             <div class="clinic-center-box-content">
               <div class="clinic-center-info">
                 <div class="text">2015 Yılından Beri Hizmet Vermekte</div>
-                <div class="title">Türkmed Diyaliz Merkezi</div>
+                <div class="title"><a href="/clinic/turkmed">Türkmed Diyaliz Merkezi</a></div>
                 <div class="tm-display-flex">
                   <div class="text">Arama yaptığınız konumdan 5 km uzaklıkta.</div>
                   <div class="span-text">Öne Çıkan Merkez</div>
@@ -478,7 +478,7 @@
                 <div class="users"><img src="../user/img/clinic/icons/3-User.png" alt="Icon 3-User" />Bu ay 15 kişi bu diyaliz merkezini inceledi</div>
               </div>
               <div class="right">
-                <button class="btn btn-second">Randevu Oluştur</button>
+                <a href="/clinic/turkmed" class="btn btn-second">Randevu Oluştur</a>
               </div>
             </div>
           </div>
@@ -489,7 +489,7 @@
             <div class="clinic-center-box-content">
               <div class="clinic-center-info">
                 <div class="text">2015 Yılından Beri Hizmet Vermekte</div>
-                <div class="title">Bodrum Diyaliz Merkezi</div>
+                <div class="title"><a href="/clinic/turkmed">Bodrum Diyaliz Merkezi</a></div>
                 <div class="tm-display-flex">
                   <div class="text">Arama yaptığınız konumdan 3 km uzaklıkta.</div>
                   <div class="span-text">Öne Çıkan Merkez</div>
@@ -543,7 +543,7 @@
             <div class="clinic-center-box-content">
               <div class="clinic-center-info">
                 <div class="text">2015 Yılından Beri Hizmet Vermekte</div>
-                <div class="title">Milas Diyaliz Merkezi</div>
+                <div class="title"><a href="/clinic/turkmed">Milas Diyaliz Merkezi</a></div>
                 <div class="tm-display-flex">
                   <div class="text">Arama yaptığınız konumdan 3 km uzaklıkta.</div>
                   <div class="span-text">Öne Çıkan Merkez</div>
@@ -597,7 +597,7 @@
             <div class="clinic-center-box-content">
               <div class="clinic-center-info">
                 <div class="text">2015 Yılından Beri Hizmet Vermekte</div>
-                <div class="title">Karşıyaka Diyaliz Merkezi</div>
+                <div class="title"><a href="/clinic/turkmed">Karşıyaka Diyaliz Merkezi</a></div>
                 <div class="tm-display-flex">
                   <div class="text">Arama yaptığınız konumdan 3 km uzaklıkta.</div>
                   <div class="span-text">Öne Çıkan Merkez</div>
