--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -55,7 +55,7 @@
   <div class="container">
     <div class="tm-inner-title">
       <div class="tm-section-title">Diyaliz Merkezlerini Keşfedin</div>
-      <a href="#" class="tm-show-all-link">Tümünü Görüntüle</a>
+      <a href="/clinic/all" class="tm-show-all-link">Tümünü Görüntüle</a>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
@@ -111,7 +111,7 @@
   <div class="container">
     <div class="tm-inner-title">
       <div class="tm-section-title">Diyalizi Tedaviniz İçin İlham Alın</div>
-      <a href="../user/articles/articles.html" class="tm-show-all-link">Tümünü Görüntüle</a>
+      <a href="/blogs" class="tm-show-all-link">Tümünü Görüntüle</a>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
