--- a/src/views/user/partials/login-model.ejs
+++ b/src/views/user/partials/login-model.ejs
@@ -6,7 +6,7 @@
           <img src="../user/img/icons/close.png" alt="Icon Close" />
         </button>
       </div>
-      <form class="tm-form" action="/auth/login" method="POST">
+      <form class="tm-form" action="/login" method="POST">
         <div class="form-title text-center">Giriş Yap</div>
         <div class="form-group">
           <label for="login-email">Email Adresi</label>
