--- a/src/views/user/pages/register.ejs
+++ b/src/views/user/pages/register.ejs
@@ -22,7 +22,7 @@
         <div class="card px-0 pt-4 pb-0 mt-3 mb-3">
           <div class="title">Kayıt Ol</div>
           <div class="sub-menu">Zaten üye misiniz? <a href="" >Giriş Yapın</a></div>
-          <form class="tm-form-wide" action="/auth/register" method="POST">
+          <form class="tm-form-wide" action="/register" method="POST">
             <div class="form-group">
               <label for="name">Adınız Soyadınız</label>
               <input type="text" class="form-control" id="nameSurname" name="nameSurname" value="<%- typeof nameSurname != 'undefined' ? nameSurname : '' %>" placeholder="Adınız Soyadınız" />
@@ -38,7 +38,7 @@
             <div class="form-group password">
               <label for="login-password">Şifrenizi Giriniz</label>
               <input type="password" class="form-control" id="password" name="password" value="<%- typeof password != 'undefined' ? password : '' %>" placeholder="Şifreniz" />
-              <img src="../img/clinic/svg/show-password.svg" alt="Icon Arrow" />
+              <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
             </div>
             <div class="form-group">
               <label for="tel">Telefon Numaranız</label>
@@ -56,7 +56,7 @@
             </div>
             <div class="tm-button-next left">
               <button type="submit" class="btn-second">Devam Et</button>
-              <!-- <a href="/auth/activation" class="btn-second">Sonraki Adım</a> -->
+              <!-- <a href="/activation" class="btn-second">Sonraki Adım</a> -->
             </div>
           </form>
         </div>
