--- a/src/views/user/partials/top-navbar.ejs
+++ b/src/views/user/partials/top-navbar.ejs
@@ -23,7 +23,7 @@
                 <img src="../user/img/icons/question.png" alt="Icons Question" />
               </li>
               <li class="nav-item buttons">
-                <a href="../user/clinic/clinic-index.html" class="nav-link btn-third">Merkezinizi Ekleyin</a>
+                <a href="../clinic/" class="nav-link btn-third">Merkezinizi Ekleyin</a>
               </li>
               <li class="nav-item buttons">
                 <a href="../user/register/register.html" class="nav-link btn-second">Kayıt Ol</a>
@@ -67,7 +67,7 @@
                 </div>
               </li>
               <li class="nav-item buttons">
-                <a href="/auth/logout" type="button" class="nav-link btn-second">Çıkış Yap</a>
+                <a href="/logout" type="button" class="nav-link btn-second">Çıkış Yap</a>
               </li>
             </ul>
           </div>
