--- a/src/views/user/pages/clinic/all-view.ejs
+++ b/src/views/user/pages/clinic/all-view.ejs
@@ -1,3 +1,10 @@
+<head>
+  <link rel="stylesheet" href="../user/css//clinic/all-view.css" />
+  <link rel="stylesheet" href="../user/css/footer.css" />
+</head>
+
+<%- include("../../partials/top-navbar") %> 
+
 <div id="country-main" class="p-5">
   <div class="container">
     <div class="row">
@@ -15,7 +22,7 @@
               <div class="row justify-content-center">
                 <div class="col-lg col-md-4 col-sm-6">
                   <div class="row">
-                    <p class="city"><a href="/clinic/clinic-list">Adana</a> <span>(15)</span></p>
+                    <p class="city">Adana <span>(15)</span></p>
                     <p class="city">Adıyaman <span>(22)</span></p>
                     <p class="city">Afyon <span>(31)</span></p>
                     <p class="city">Ağrı <span>(8)</span></p>
@@ -476,3 +483,5 @@
     </div>
   </div>
 </div>
+
+<%- include("../../partials/footer")  %> 
