--- a/src/views/user/partials/footer.ejs
+++ b/src/views/user/partials/footer.ejs
@@ -8,10 +8,10 @@
         <ul class="nav flex-column">
           <li key="footerTitle" class="nav-item mb-2">Eleifend eleifend vel lobortis arcu quam mattis sodales turpis ornare at dictumst in</li>
           <li class="nav-item social mb-2">
-            <img src="./user/img/socials/facebook.png" alt="" />
-            <img src="./user/img/socials/instagram.png" alt="" />
-            <img src="./user/img/socials/in.png" alt="" />
-            <img src="./user/img/socials/twitter.png" alt="" />
+            <img src="../user/img/socials/facebook.png" alt="" />
+            <img src="../user/img/socials/instagram.png" alt="" />
+            <img src="../user/img/socials/in.png" alt="" />
+            <img src="../user/img/socials/twitter.png" alt="" />
           </li>
         </ul>
       </div>
