--- a/src/views/user/pages/clinic/clinic-login.ejs
+++ b/src/views/user/pages/clinic/clinic-login.ejs
@@ -1,24 +1,36 @@
-<div class="tm-top-bar single tm-bg-background" id="tm-top-bar"><%- include("../../partials/top-navbar") %></div>
+<head>
+  <link rel="stylesheet" href="../user/css/style.css" />
+  <link rel="stylesheet" href="../user/css/clinic/index.css" />
+  <link rel="stylesheet" href="../user/css/footer.css" />
+</head>
 
-<div id="section-i" class="tm-p tm-pt-20 tm-pb-20">
-  <div class="container">
-    <div class="row top">
-      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center">
-        <form class="tm-form">
-          <div class="form-title text-center">Giriş Yap</div>
-          <div class="form-group">
-            <label for="login-email">Email Adresi</label>
-            <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Email Adresiniz" />
-          </div>
-          <div class="form-group password">
-            <label for="login-password">Şifrenizi Giriniz</label>
-            <input type="password" class="form-control" id="login-password" placeholder="Şifreniz" />
-            <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
-          </div>
-          <button type="submit" class="btn btn-second">Giriş Yap</button>
-          <div class="link">Üyeliğiniz Yok Mu?<a href="./clinic-choose-personal.html"> Kayıt Ol</a></div>
-        </form>
-      </div>
+    <div class="tm-main-content" id="top">
+
+        <%- include("../../partials/navbar")  %> 
+
+        <div id="section-i" class="tm-p tm-pt-20 tm-pb-20">
+            <div class="container">
+                <div class="row top">
+                    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 d-flex justify-content-center">
+                        <form class="tm-form">
+                            <div class="form-title text-center">Giriş Yap</div>
+                            <div class="form-group">
+                              <label for="login-email">Email Adresi</label>
+                              <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Email Adresiniz">
+                            </div>
+                            <div class="form-group password">
+                              <label for="login-password">Şifrenizi Giriniz</label>
+                              <input type="password" class="form-control" id="login-password" placeholder="Şifreniz">
+                              <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
+                            </div>
+                            <button type="submit" class="btn btn-second">Giriş Yap</button>
+                            <div class="link">Üyeliğiniz Yok Mu?<a href="./clinic-choose-personal.html"> Kayıt Ol</a></div>
+                          </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <%- include("../../partials/footer")  %> 
     </div>
-  </div>
-</div>
