--- a/src/views/user/pages/verify.ejs
+++ b/src/views/user/pages/verify.ejs
@@ -1,3 +1,17 @@
+<head>
+  <link rel="stylesheet" type="text/css" href="../slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css" />
+  <link rel="stylesheet" type="text/css" href="../css/datepicker.css" />
+  <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/footer.css" />
+  <link rel="stylesheet" href="../css/register/register.css" />
+</head>
+
+
+    <div class="tm-main-content" id="register">
+
+        <% include("../partials/top-navbar-dark") %> 
+
         <div id="section-i" class="tm-p tm-pt-20 tm-pb-20">
             <div class="container">
                 <div class="row">
@@ -16,17 +30,17 @@
                                 <div class="text">Tamamlandı</div>
                             </li>
                         </ul> <!-- fieldsets -->
-                        <div class="card">
+                        <div class="card-register">
                             <div class="row">
                                 <div class="col-12">
                                     <img src="../user/img/register/done.png" alt="Icon Done" />
-                                    <div class="title">Kayıt İşleminiz Tamamlandı </div>
-                                    <a href="#" class="sub-menu"> Email : <%= email %>   </a>
+                                    <div class="title">Kayıt İşleminiz Tamamlandı</div>
+                                    <a href="" class="sub-menu">dialysing@demo.com</a>
                                     <p>Mail adresinize gelen aktivasyon linkine
                                         tıklayarak üyeliğinizi tamamladıktan sonra
                                         giriş yapabilirsiniz.</p>
                                     <div class="tm-button-next left">
-                                        <a href="../user/index2.html" class="btn-second">Anasayfa</a>
+                                        <a href="../index2.html" class="btn-second">Anasayfa</a>
                                     </div>
                                 </div>
                             </div>
@@ -35,3 +49,6 @@
                 </div>
             </div>
         </div>
+
+    <%- include("../partials/footer")  %> 
+    </div>
