--- a/src/views/user/partials/top-navbar.ejs
+++ b/src/views/user/partials/top-navbar.ejs
@@ -1,78 +1,95 @@
-    <!-- Top Navbar -->
-    <div class="container">
-      <div class="row">
-        <nav class="navbar navbar-expand-lg narbar-light">
-          <a class="navbar-brand logo" href="#"> Dialysing<span>.com</span> </a>
-          <a href="#" class="location"><img src="../user/img/icons/location-white.png" alt="Location White" /><span>İstanbul, Türkiye</span></a>
-          <button type="button" id="nav-toggle" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#mainNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div id="mainNav" class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item language-selection">
-                <img src="../user/img/flags/turkey.png" alt="Flags Turkey" />
-                <div class="tm-form-element tm-form-element-2">
-                  <select name="language" class="form-control tm-select" id="language">
-                    <option value="">Türkçe</option>
-                    <option value="1">Ingilizce</option>
-                    <option value="2">Almanca</option>
-                  </select>
-                </div>
-              </li>
-              <li class="nav-item question">
-                <img src="../user/img/icons/question.png" alt="Icons Question" />
-              </li>
-              <li class="nav-item buttons">
-                <a href="../clinic/" class="nav-link btn-third">Merkezinizi Ekleyin</a>
-              </li>
-              <li class="nav-item buttons">
-                <a href="../user/register/register.html" class="nav-link btn-second">Kayıt Ol</a>
-              </li>
-              <li class="nav-item buttons">
-                <!-- Button trigger modal -->
-                <button type="button" class="nav-link btn-second" data-toggle="modal" data-target="#loginModal">Giriş Yap</button>
-
-                <!-- Modal -->
-                <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-hidden="true">
-                  <div class="modal-dialog modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                          <img src="../user/img/icons/close.png" alt="Icon Close" />
-                        </button>
-                      </div>
-                      <form class="tm-form">
-                        <div class="form-title text-center">Giriş Yap</div>
-                        <div class="form-group">
-                          <label for="login-email">Email Adresi</label>
-                          <input type="email" class="form-control" id="login-email" aria-describedby="emailHelp" placeholder="Email Adresiniz" />
-                        </div>
-                        <div class="form-group password">
-                          <label for="login-password">Şifrenizi Giriniz</label>
-                          <input type="password" class="form-control" id="login-password" placeholder="Şifreniz" />
-                          <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
-                        </div>
-                        <div class="links">
-                          <div class="form-group not-border checkbox">
-                            <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                            <label class="form-check-label" for="flexCheckChecked"> Beni Hatırla </label>
-                          </div>
-                          <a href="#">Şifremi Unuttum</a>
-                        </div>
-                        <button type="submit" class="btn btn-second">Giriş Yap</button>
-                        <div class="link">Hesabınız ile birlikte,<a href="#"> Şartlar ve Koşullar ve Gizlilik Politikası & Kişisel Verilerin İşlenmesine</a> onay verilir.</div>
-                      </form>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="nav-item buttons">
-                <a href="/logout" type="button" class="nav-link btn-second">Çıkış Yap</a>
-              </li>
-            </ul>
+<nav class="navbar navbar-expand-lg py-3">
+  <div class="container">
+    <a class="navbar-brand" href="#">Dialysing<span>.com</span> </a>
+    <a href="#" class="location mx-0"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i><span id="location"></span></a>
+    <!-- Location Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-        </nav>
+          <div class="modal-body select">
+            <!-- ülke -->
+            <div class="row">
+              <div class="col-md-6 col-xs-6">
+                <p key="country"><b>Ülkenizi Seçin</b></p>
+              </div>
+              <div class="col-md-6 col-xs-6 mb-3">
+                <select id="country" class="form-control">
+                  <option key="countr" value="">-- Ülke --</option>
+                </select>
+              </div>
+            </div>
+            <!-- end country row -->
+
+            <!-- Şehir -->
+            <div class="row">
+              <div class="col-md-6 col-xs-6">
+                <p key="citySelect"><b>Şehrinizi Seçin</b></p>
+              </div>
+              <div class="col-md-6 col-xs-6 mb-3">
+                <select id="region" class="form-control">
+                  <option key="cities" value="">-- İl --</option>
+                </select>
+              </div>
+            </div>
+            <!-- end şehir row -->
+
+            <!-- ilçe -->
+            <div class="row">
+              <div class="col-md-6 col-xs-6">
+                <p key="districtSelect"><b>İlçenizi Seçin</b></p>
+              </div>
+              <div class="col-md-6 col-xs-6 mb-3">
+                <select id="city" class="form-control">
+                  <option value="">-- İlçe --</option>
+                </select>
+              </div>
+            </div>
+            <!-- end ilçe row -->
+            <button type="button" key="add" class="nav-link btn-second" data-bs-dismiss="modal">Ekle</button>
+          </div>
+        </div>
       </div>
     </div>
-
-
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+      <span><i class="bi bi-list"></i></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarsExample07">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <div class="dropdown select-lang mt-2">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="drop_yazı" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img key="flag" src="../user/img/flags/turkey.png" width="25" height="20" alt="Flags Turkey" /> Türkçe</button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" id="tr" href="#"
+                ><div class="input-group select-lang"><img key="flag" src="../user/img/flags/turkey.png" alt="Flags Turkey" />Türkçe</div></a
+              >
+              <a class="dropdown-item" id="en" href="#"
+                ><div class="input-group select-lang"><img key="flag" src="../user/img/flags/en.png" alt="Flags Turkey" />English</div></a
+              >
+            </div>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="question nav-link mt-2"><i class="bi bi-question-circle"></i></a>
+        </li>
+        <li class="nav-item"><button href="#" class="nav-link btn-third btn-outline-light mx-2 mt-2">Merkezinizi Ekleyin</button></li>
+        <li class="nav-item"><button href="#" class="nav-link btn-second mx-2 mt-2">Kayıt Ol</button></li>
+        <li class="nav-item"><button href="#" class="nav-link btn-second mx-2 mt-2">Giriş Yap</button></li>
+        <li class="nav-item">
+          <div class="dropdown mt-3">
+            <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle mt-1 mx-2" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+              <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle" />
+            </a>
+            <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+              <li><a class="dropdown-item" href="#">Profil</a></li>
+              <li><a class="dropdown-item" href="#">Çıkış Yap</a></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
