--- a/src/views/user/pages/verify.ejs
+++ b/src/views/user/pages/verify.ejs
@@ -1,10 +1,10 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="../slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css" />
-  <link rel="stylesheet" type="text/css" href="../css/datepicker.css" />
-  <link rel="stylesheet" href="../css/style.css" />
-  <link rel="stylesheet" href="../css/footer.css" />
-  <link rel="stylesheet" href="../css/register/register.css" />
+  <link rel="stylesheet" type="text/css" href="../user/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="../user/slick/slick-theme.css" />
+  <link rel="stylesheet" type="text/css" href="../user/css/datepicker.css" />
+  <link rel="stylesheet" href="../user/css/style.css" />
+  <link rel="stylesheet" href="../user/css/footer.css" />
+  <link rel="stylesheet" href="../user/css/register/register.css" />
 </head>
 
 
@@ -35,7 +35,7 @@
                                 <div class="col-12">
                                     <img src="../user/img/register/done.png" alt="Icon Done" />
                                     <div class="title">Kayıt İşleminiz Tamamlandı</div>
-                                    <a href="" class="sub-menu">dialysing@demo.com</a>
+                                    <a href="" class="sub-menu"><%- email  %> </a>
                                     <p>Mail adresinize gelen aktivasyon linkine
                                         tıklayarak üyeliğinizi tamamladıktan sonra
                                         giriş yapabilirsiniz.</p>
