--- a/src/views/clinic-panel/partials/footer.ejs
+++ b/src/views/clinic-panel/partials/footer.ejs
@@ -1,86 +1,63 @@
-<!-- partial:partials/_footer.html -->
-<footer class="tm-bg-dark-blue-second">
-  <div class="container footer-top tm-pt-4">
-    <div class="row top">
-      <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
-        <a class="mr-auto logo logo-footer tm-color-white" href="#"> Dialysing<span>.com</span> </a>
+<!--======= FOOTER =====-->
+<footer>
+  <div class="container footer p-5">
+    <div class="row pt-5">
+      <div class="col-lg-3 mb-5">
+        <h5>
+          <a class="f-el tm-margin-b-1 mr-auto logo logo-footer tm-color-white" href="../index.html">Dialysing<span>.com</span></a>
+        </h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-2">Eleifend eleifend vel lobortis arcu quam mattis sodales turpis ornare at dictumst in</li>
+          <li class="nav-item social mb-2">
+            <img src="../user/img/socials/facebook.png" alt="" />
+            <img src="../user/img/socials/instagram.png" alt="" />
+            <img src="../user/img/socials/in.png" alt="" />
+            <img src="../user/img/socials/twitter.png" alt="" />
+          </li>
+        </ul>
       </div>
-      <div class="col-sm-12 col-md-9 col-lg-9 col-xl-9">
-        <div class="row">
-          <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2">
-            <ul class="tm-color-white tm-p-0">
-              <li class="tm-f-600">Destek</li>
-            </ul>
-          </div>
-          <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2">
-            <ul class="tm-color-white tm-p-0">
-              <li class="tm-f-600">Hizmetler</li>
-            </ul>
-          </div>
-          <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2">
-            <ul class="tm-color-white tm-p-0">
-              <li class="tm-f-600">Güvenlik</li>
-            </ul>
-          </div>
-          <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-            <ul class="tm-color-white tm-p-0">
-              <li class="tm-f-600">Abonelikler</li>
-            </ul>
-          </div>
-        </div>
+
+      <div class="col mb-5">
+        <h5>Destek</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Kadromuz</a></li>
+          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Kariyer</a></li>
+          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Bloglar</a></li>
+          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Güvenlik</a></li>
+        </ul>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
-        <div class="tm-color-white tm-pb-4">Eleifend eleifend vel lobortis arcu quam mattis sodales turpis ornare at dictumst in</div>
-        <div class="social-icons tm-pt-2 tm-pb-4">
-          <a href="#" class="icon"><img src="../user/img/socials/facebook.png" alt="Social Facebook" /></a>
-          <a href="#" class="icon"><img src="../user/img/socials/instagram.png" alt="Social Instagram" /></a>
-          <a href="#" class="icon"><img src="../user/img/socials/linkedin.png" alt="Social Linkedin" /></a>
-          <a href="#" class="icon"><img src="../user/img/socials/twitter.png" alt="Social Twitter" /></a>
-        </div>
+
+      <div class="col mb-5">
+        <h5>Hizmetler</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Klinik Yönetimi</a></li>
+          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Haberler</a></li>
+          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Etkinlikler</a></li>
+          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">İletişim</a></li>
+        </ul>
       </div>
-      <div class="col-sm-12 col-md-9 col-lg-9 col-xl-9">
-        <div class="row">
-          <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2">
-            <ul class="tm-color-white tm-p-0">
-              <li>Kadromuz</li>
-              <li>Kariyer</li>
-              <li>Bloglar</li>
-              <li>Güvenlik</li>
-            </ul>
+
+      <div class="col mb-5">
+        <h5>Güvenlik</h5>
+        <ul class="nav flex-column">
+          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Kişisel Sözleşmeler</a></li>
+          <li class="nav-item mb-1"><a href="#" class="nav-link p-0">Gizlilik Sözleşmeler</a></li>
+        </ul>
+      </div>
+
+      <div class="col-lg-3 mb-3">
+        <form>
+          <h5>Abonelikler</h5>
+          <p class="text-white">Son gelişmelerden haberdar olmak için abone olun.</p>
+          <div class="form-group bottom footer-input">
+            <input name="check-in" type="text" class="form-control" id="inputCheckIn" placeholder="dialysing@demo.com.tr" />
+            <img src="../user/img/icons/arrow.png" class="mt-0" alt="Icon Arrow" />
           </div>
-          <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2">
-            <ul class="tm-color-white tm-p-0">
-              <li>Klinik Yönetimi</li>
-              <li>Haberler</li>
-              <li>Etkinlikler</li>
-              <li>Etkinlikler</li>
-            </ul>
-          </div>
-          <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2">
-            <ul class="tm-color-white tm-p-0">
-              <li>Kişisel Sözleşmeler</li>
-              <li>Gizlilik Sözleşmesi</li>
-            </ul>
-          </div>
-          <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
-            <div class="tm-color-white tm-pb-2 tm-p-0">Son gelişmelerden haberdar olmak için abone olun.</div>
-            <div class="form-group bottom footer-input">
-              <input name="check-in" type="text" class="form-control" id="inputCheckIn" placeholder="dialysing@demo.com.tr" />
-              <img src="../user/img/icons/arrow.png" alt="Icon Arrow" />
-            </div>
-          </div>
-        </div>
+        </form>
       </div>
     </div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <p class="copyright col-sm-12 tm-font-light tm-color-white opacity tm-pt-2 tm-pb-4 tm-margin-b-0">
-        Copyright &copy;
-        <span class="tm-current-year">2021</span>Dialysing.com Designed By Ayhan Fırat Fındıkoğlu
-      </p>
+    <div class="d-flex justify-content-between mt-3 py-4 border-top">
+      <p class="text-secondary">&copy; 2021 Dialysing.com. Her hakkı saklıdır.</p>
     </div>
   </div>
 </footer>
