--- a/src/views/clinic-panel/pages/clinic-login.ejs
+++ b/src/views/clinic-panel/pages/clinic-login.ejs
@@ -6,7 +6,7 @@
 
     <div class="tm-main-content" id="top">
 
-        <%- include("../../partials/navbar")  %> 
+        <%- include("../partials/navbar")  %> 
 
         <div id="section-i" class="tm-p tm-pt-20 tm-pb-20">
             <div class="container">
@@ -32,5 +32,5 @@
         </div>
 
 
-        <%- include("../../partials/footer")  %> 
+        <%- include("../partials/footer")  %> 
     </div>
