--- a/src/views/user/pages/verify.ejs
+++ b/src/views/user/pages/verify.ejs
@@ -10,7 +10,7 @@
 
     <div class="tm-main-content" id="register">
 
-        <% include("../partials/top-navbar-dark") %> 
+        <%- include("../partials/top-navbar-dark") %> 
 
         <div id="section-i" class="tm-p tm-pt-20 tm-pb-20">
             <div class="container">
