--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -80,7 +80,7 @@
                 <img src="../user/img/icons/question.png" alt="Icons Question" />
               </li>
               <li class="nav-item buttons">
-                <a href="./clinic/addCenterMainPage.html" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
+                <a href="./clinic" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
               </li>
               <li class="nav-item buttons">
                 <a href="./register/register.html" key="register" class="nav-link btn-second">Kayıt Ol</a>
