--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="tm-inner-title">
       <div key="exploreTitle" class="tm-section-title">Diyaliz Merkezlerini Keşfedin</div>
-      <a href="./clinic/all-view.html" class="tm-show-all-link" key="allView">Tümünü Görüntüle</a>
+      <a href="./clinic/all" class="tm-show-all-link" key="allView">Tümünü Görüntüle</a>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
@@ -60,7 +60,7 @@
   <div class="container">
     <div class="tm-inner-title">
       <div key="articleTitle" class="tm-section-title">Diyalizi Tedaviniz İçin İlham Alın</div>
-      <a key="allViewArticle" href="./articles/articles.html" class="tm-show-all-link">Tüm Makaleleri Görüntüle</a>
+      <a key="allViewArticle" href="./blogs" class="tm-show-all-link">Tüm Makaleleri Görüntüle</a>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
